<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>OUTResultWidget</class>
 <widget class="QWidget" name="OUTResultWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>274</width>
    <height>434</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QRadioButton" name="rb_standardresult">
     <property name="text">
      <string>Résultat d'entrée standard</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QRadioButton" name="rb_copyresult">
     <property name="text">
      <string>Résultat d'entrée à copier</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="cb_recursive">
     <property name="text">
      <string>Recherche récursive</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLabel" name="label_4">
     <property name="text">
      <string>Alias d'indexation :</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLineEdit" name="alias"/>
   </item>
   <item>
    <widget class="QLabel" name="label_2">
     <property name="text">
      <string>Nom du modèle de résultat :</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLineEdit" name="modelName">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLabel" name="label_3">
     <property name="text">
      <string>Description du résultat :</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QPlainTextEdit" name="modelDescription">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
    </widget>
   </item>
   <item>
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
